MyTriggers/framework/objects/MyTriggerSetting__mdt/MyTriggerSetting__mdt.object-meta.xml
<CustomObject>
    <description>MyTrigger Settings let you define trigger handler classes to run on the selected sObject and trigger event</description>
    <label>MyTrigger Setting</label>
    <pluralLabel>MyTrigger Settings</pluralLabel>
</CustomObject>