MyTriggers/framework/objects/MyTriggerSetting__mdt/fields/Class__c.field-meta.xml
<CustomField>
    <fullName>Class__c</fullName>
    <description>The name of the ApexClass that should run for configured Trigger Events. Use the Namespace Prefix field if the class should have a namespace</description>
    <inlineHelpText>The name of the ApexClass that should run for configured Trigger Events. Use the Namespace Prefix field if the class should have a namespace</inlineHelpText>
    <label>Class</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>