MyTriggers/framework/objects/MyTriggerSetting__mdt/fields/ClassNamespacePrefix__c.field-meta.xml
<CustomField>
    <fullName>ClassNamespacePrefix__c</fullName>
    <description>Namespace prefix of trigger handler apex class</description>
    <inlineHelpText>Namespace prefix of trigger handler apex class</inlineHelpText>
    <label>Class Namespace Prefix</label>
    <length>255</length>
    <type>Text</type>
</CustomField>