MyTriggers/framework/objects/MyTriggerSetting__mdt/fields/Event__c.field-meta.xml
<CustomField>
    <fullName>Event__c</fullName>
    <description>Trigger event to run this handler</description>
    <inlineHelpText>Trigger event to run this handler</inlineHelpText>
    <label>Event</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BEFORE_INSERT</fullName>
                <default>true</default>
                <label>BeforeInsert</label>
            </value>
            <value>
                <fullName>BEFORE_UPDATE</fullName>
                <label>BeforeUpdate</label>
            </value>
            <value>
                <fullName>BEFORE_DELETE</fullName>
                <label>BeforeDelete</label>
            </value>
            <value>
                <fullName>BEFORE_UNDELETE</fullName>
                <label>BeforeUndelete</label>
            </value>
            <value>
                <fullName>AFTER_INSERT</fullName>
                <label>AfterInsert</label>
            </value>
            <value>
                <fullName>AFTER_UPDATE</fullName>
                <label>AfterUpdate</label>
            </value>
            <value>
                <fullName>AFTER_DELETE</fullName>
                <label>AfterDelete</label>
            </value>
            <value>
                <fullName>AFTER_UNDELETE</fullName>
                <label>AfterUndelete</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>