MyTriggers/framework/objects/MyTriggerSetting__mdt/fields/isByPassedAllowed__c.field-meta.xml
<CustomField>
    <fullName>isByPassedAllowed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If true, will this setting will not be run for any user that has the byPass MyTrigger Custom Permission assigned</description>
    <inlineHelpText>If true, will this setting will not be run for any user that has the byPass MyTrigger Custom Permission assigned</inlineHelpText>
    <label>Allow Bypass</label>
    <type>Checkbox</type>
</CustomField>