MyTriggers/framework/objects/MyTriggerSetting__mdt/fields/sObject__c.field-meta.xml
<CustomField>
    <fullName>sObject__c</fullName>
    <description>The sObject for which a Trigger implementing MyTrigger exists and for which a specific class should run</description>
    <inlineHelpText>Choose to sObject for which you want to run the class</inlineHelpText>
    <label>sObject</label>
    <referenceTo>EntityDefinition</referenceTo>
    <relationshipLabel>TriggerHandlerSettings</relationshipLabel>
    <relationshipName>TriggerHandlerSettings</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>