MyTriggers/framework/objects/MyTriggerSetting__mdt/fields/sObjectAPIName__c.field-meta.xml
<CustomField>
    <fullName>sObjectAPIName__c</fullName>
    <description>Should only be used IF a sObject type is not available in the sObject picklist. Picklist takes precedence over this field. Field requires fully qualified API Name (namespace__CustomObject__c)</description>
    <inlineHelpText>Should only be used IF a sObject type is not available in the sObject picklist. Picklist takes precedence over this field. Field requires fully qualified API Name (namespace__CustomObject__c)</inlineHelpText>
    <label>sObject Override</label>
    <length>255</length>
    <type>Text</type>
</CustomField>