MyTriggers/framework/objects/MyTriggerSetting__mdt/validationRules/VR01_PreventUseOfBothSObjectFields.validationRule-meta.xml
<ValidationRule>
    <fullName>VR01_PreventUseOfBothSObjectFields</fullName>
    <active>true</active>
    <description>Throws error if both fields - sObject and sObject Override - are used on the same setting.</description>
    <errorConditionFormula>NOT(ISBLANK(sObject__c)) &amp;&amp; NOT(ISBLANK(sObjectAPIName__c))</errorConditionFormula>
    <errorMessage>You cannot specifiy sObject and sObject Override on the same setting. VR01</errorMessage>
</ValidationRule>