MyTriggers/framework/objects/MyTriggerSetting__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Active__c</columns>
    <columns>sObject__c</columns>
    <columns>Event__c</columns>
    <columns>DeveloperName</columns>
    <columns>Order__c</columns>
    <columns>ClassNamespacePrefix__c</columns>
    <columns>Class__c</columns>
    <columns>Description__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>